gammaray (1.3.1-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Wed, 01 May 2013 12:57:15 +0200

gammaray (1.3.0-1) experimental; urgency=low

  * New upstream release.
  * Add dependency on VTK 5.10 and enable object visualizer plugin.
  * Don't set RPATH in binaries; prevents binary-or-shlib-defines-rpath
    lintian error.
  * Refreshed d/patches/widget-export-actions-location.patch and
    d/patches/gammaray-probe-versioned-soname.patch.
  * Enable KJob tracker plugin.
  * Updated d/copyright.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Mon, 04 Feb 2013 22:54:36 +0100

gammaray (1.2.2-1) unstable; urgency=low

  * New upstream release.
  * Removed d/patches/dont-build-functionoverwriter.patch and
    debian/patches/gnu-hurd-build-fix.patch (applied upstream).
  * Refreshed d/patches/gammaray-probe-versioned-soname.patch.
  * Bump Standards-Version to 3.9.4.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sat, 22 Dec 2012 18:17:04 +0100

gammaray (1.2.1-2) unstable; urgency=low

  * Build-depend on libgraphviz-dev instead of dummy transitional
    graphviz-dev.
  * Fix build on GNU Hurd.
  * Don't build core/hooking/*.cpp. Function overwriter is used only on
    Windows and Mac, disabling it fixes building GammaRay on other archs
    than i386 and amd64.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 06 Sep 2012 15:45:25 +0200

gammaray (1.2.1-1) unstable; urgency=low

  * Initial release. (Closes: #654667)

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 21 Aug 2012 10:48:10 +0200