@@ -10,11 +10,11 @@ Subject: gammaray-probe-versioned-soname
  4 files changed, 4 insertions(+), 2 deletions(-)
 
 diff --git a/CMakeLists.txt b/CMakeLists.txt
-index fe396a0..01dc3ac 100644
+index 0ce0cee..b3b6684 100644
 --- a/CMakeLists.txt
 +++ b/CMakeLists.txt
 @@ -28,6 +28,7 @@ set(GAMMARAY_VERSION_MINOR "3")
- set(GAMMARAY_VERSION_PATCH "0")
+ set(GAMMARAY_VERSION_PATCH "1")
  set(GAMMARAY_VERSION "${GAMMARAY_VERSION_MAJOR}.${GAMMARAY_VERSION_MINOR}.${GAMMARAY_VERSION_PATCH}")
  set(GAMMARAY_VERSION_STRING "${GAMMARAY_VERSION}")
 +set(GAMMARAY_PROBE_SOVERSION "${GAMMARAY_VERSION_STRING}")
@@ -33,10 +33,10 @@ index 11c8cc3..b79c05d 100644
  #define GAMMARAY_BUILD_DIR "${CMAKE_BINARY_DIR}"
  
 diff --git a/core/CMakeLists.txt b/core/CMakeLists.txt
-index b0d6cf2..4978a5b 100644
+index 3831d1a..5f4ec80 100644
 --- a/core/CMakeLists.txt
 +++ b/core/CMakeLists.txt
-@@ -193,6 +193,6 @@ endif()
+@@ -194,6 +194,6 @@ endif()
  if(NOT WIN32)
    target_link_libraries(gammaray_probe dl)
  endif()
