@@ -1,6 +1,8 @@
 gammaray (1.3.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Refreshed d/patches/widget-export-actions-location.patch and
+    d/patches/gammaray-probe-versioned-soname.patch.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Wed, 01 May 2013 12:57:15 +0200
 
